--- a/modules/service/job/0.1/facets.yaml
+++ b/modules/service/job/0.1/facets.yaml
@@ -61,18 +61,16 @@ spec:
           description: Command to run in the container
           items:
             type: string
+          x-ui-command: true
           x-ui-override-disable: true
         args:
           type: array
           title: Arguments
           description: Arguments to pass to the command
-          x-ui-array-input-validation:
-            pattern: '^[a-zA-Z0-9-_ ]+$'
-            error: "Each argument can only contain alphanumeric characters, dashes, underscores, and spaces."
-          x-ui-error-message: "Each argument can only contain alphanumeric characters,
-            dashes, underscores, and spaces."
+          x-ui-error: "Enter each argument in a separate line"
           items:
             type: string
+          x-ui-command: true
           x-ui-override-disable: true
       x-ui-order:
       - args
