--- a/modules/service/statefulset/0.1/facets.yaml
+++ b/modules/service/statefulset/0.1/facets.yaml
@@ -189,18 +189,16 @@ spec:
           description: Command to run in the container
           items:
             type: string
-          
+          x-ui-command: true
           x-ui-override-disable: true
         args:
           type: array
           title: Arguments
           description: Arguments to pass to the command
-          x-ui-array-input-validation:
-            pattern: '^[a-zA-Z0-9-_ ]+$'
-            error: "Each argument can only contain alphanumeric characters, dashes, underscores, and spaces."
+          x-ui-error-message: "Enter each argument in a separate line"
           items:
             type: string
-          
+          x-ui-command: true
           x-ui-override-disable: true
         health_checks:
           type: object
@@ -1024,18 +1022,16 @@ spec:
                   description: Command to run in the container
                   items:
                     type: string
-                  
+                  x-ui-command: true
                   x-ui-override-disable: true
                 args:
                   type: array
                   title: Arguments
                   description: Arguments to pass to the command
-                  x-ui-array-input-validation:
-                    pattern: '^[a-zA-Z0-9-_ ]+$'
-                    error: "Each argument can only contain alphanumeric characters, dashes, underscores, and spaces."
+                  x-ui-error-message: "Enter each argument in a separate line"
                   items:
                     type: string
-                  
+                  x-ui-command: true
                   x-ui-override-disable: true
                 size:
                   type: object
@@ -1289,19 +1285,16 @@ spec:
                   description: Command to run in the container
                   items:
                     type: string
-                  
+                  x-ui-command: true
                   x-ui-override-disable: true
                 args:
                   type: array
                   title: Arguments
                   description: Arguments to pass to the command
-                  x-ui-array-input-validation:
-                    pattern: '^[a-zA-Z0-9-_ ]+$'
-                    error: "Each argument can only contain alphanumeric characters,
-                    dashes, underscores, and spaces."
+                  x-ui-error-message: "Enter each argument in a separate line"
                   items:
                     type: string
-                  
+                  x-ui-command: true
                   x-ui-override-disable: true
                 size:
                   type: object
