--- a/modules/service/test-flavor/0.1/facets.yaml
+++ b/modules/service/test-flavor/0.1/facets.yaml
@@ -1775,7 +1775,7 @@ spec:
   - sidecars
   - cloud_permissions
 sample:
-  flavor: test_flavor
+  flavor: test-flavor
   metadata:
     labels:
       deliveryType: MANUAL
