changed the outputs in yaml

--- a/modules/pubsub/default/1.0/facets.yaml
+++ b/modules/pubsub/default/1.0/facets.yaml
@@ -72,8 +72,7 @@ spec:
   required: []
 outputs:
   default:
-    type: '@outputs/misc'
-    title: Pub/Sub Topic
+    type: "@outputs/pubsub"
 sample:
   kind: pubsub
   flavor: default
