changed the outputs in yaml

--- a/modules/pubsub/default/1.0/facets.yaml
+++ b/modules/pubsub/default/1.0/facets.yaml
@@ -72,7 +72,8 @@ spec:
   required: []
 outputs:
   default:
-    type: "@outputs/pubsub"
+    type: '@outputs/misc'
+    title: Pub/Sub Topic
 sample:
   kind: pubsub
   flavor: default
