--- a/modules/kubernetes_cluster/eks/1.0/facets.yaml
+++ b/modules/kubernetes_cluster/eks/1.0/facets.yaml
@@ -25,7 +25,7 @@ inputs:
 outputs:
   default:
     type: '@facets/kubernetes-details'
-    title: "Kubernetes Cluster Output"
+    title: Kubernetes Cluster Output
   attributes.k8s_details:
     type: '@facets/eks'
     title: Kubernetes Cluster Output
