--- a/modules/aws_dlm_lifecycle_policy/default/0.1/facets.yaml
+++ b/modules/aws_dlm_lifecycle_policy/default/0.1/facets.yaml
@@ -40,9 +40,11 @@ spec:
                   title: Times
                   description: Times of day to create snapshots (HH:MM format)
                   x-ui-override-disable: true
+                  x-ui-array-input-validation:
+                    pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$
+                    error: Invalid time format. Please use HH:MM format.
                   items:
                     type: string
-                    pattern: "^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$"
                 cron_expression:
                   type: string
                   title: Cron Expression
